--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
 	"files.associations": {
 		"player.h": "c",
 		"string.h": "c",
-		"coroa.h": "c"
+		"coroa.h": "c",
+		"tamanhos.h": "c",
+		"*.m": "c"
 	}
 }
